@@ -3,6 +3,9 @@ v1.3.1 - TBD
    - Change track instrument by clicking the instrument button beside each track.
   Added a config option to control blending effects in certain machines.
   Added Gem Converter advancements.
+  Reduced the Number of Compressor Slots from 2 to 1.
+   - Removed the Bronze Ingot compressor recipe. You now get Bronze from crafting
+     3 Copper Ingots and 1 Tin Ingot.
 For Minecraft 1.14 and 1.15 versions Only:
   Fix warnings in console log relating to inaccessible block loot table entries.
    - Also fixes not being able to silk-touch Gem Ore blocks.
